--- a/giulia_hxs/style.css
+++ b/giulia_hxs/style.css
@@ -129,11 +129,22 @@ form input {
 	font-size: 18px;
 	border: none;
 	border-radius: 5px;
-	transition: 5s background;
+	transition: 1s all;
 	cursor: pointer;
 }
 .enviar:hover {
 	background: darkturquoise;
-	transform: scale(1.2);
-	transform: rotate(360deg);
+	transform: rotate(360deg) scale(1.2);
+}
+table {
+	margin: 20px 0 40px;
+}
+thead {
+	background: #555555;
+	color: white;
+	font-weight: bold;
+}
+td,th {
+	border: 1px solid #000000;
+	padding: 8px 15px;
 }
